--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -37,7 +37,7 @@
 
 .nav {
   /* z-index: 10; */
-  margin-top: var(--gap-double);
+  margin-top: 1.5rem;
   /* position: sticky; */
   padding: var(--gap) 0;
   /* top: 0; */
