--- a/components/tabs/tabs.module.css
+++ b/components/tabs/tabs.module.css
@@ -30,6 +30,11 @@
   color: var(--accents-5);
   font-size: 1.1rem;
 }
+
+.tab:hover{
+  color: var(--hover);
+}
+
 .tabContainer:first-child {
   padding-left: 0;
 }
