--- a/components/entry/text.module.css
+++ b/components/entry/text.module.css
@@ -1,10 +1,9 @@
 .item {
   list-style-type: none;
   position: relative;
-  /* border-bottom: 1px solid var(--lightest-gray); */
   margin: 0 1rem;
   margin-left: 0;
-  margin-top: 1rem;
+  margin-top: .4rem;
   padding: 0.5rem;
   padding-left: 0;
 }
@@ -40,6 +39,14 @@
   font-size: 14px;
 }
 
+.detail {
+  margin: 0;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  line-height: 1.3;
+  font-size: 16px;
+}
+
 .minuteRead {
   display: flex;
   align-items: center;
@@ -53,7 +60,8 @@
 }
 
 .date {
-  font-weight: 600;
+  font-weight: 500;
+  font-size: 14px;
 }
 
 .title,
@@ -70,8 +78,8 @@
 }
 
 .title {
-  font-size: 1.8rem;
-  font-weight: bold;
+  font-size: 1.5rem;
+  font-weight: 700;
   color: var(--accent);
 }
 
